--- a/import-tool/package.json
+++ b/import-tool/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "atob": "2.0.3",
+    "js-yaml": "3.10.0",
     "lodash": "4.17.4",
     "mysql2": "1.5.1",
     "sequelize": "4.28.6"
