--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Eliot_L
 github_username:  fadookie
-mastodon_url: https://mastodon.social/@Eliot_L
-mastodon_username: '@Eliot.L@mastodon.social'
+mastodon_url: https://social.coop/@Eliot_L
+mastodon_username: '@Eliot.L@social.coop'
 permalink: /:year/:month/:title/
 
 collections:
