add YouTube channel link. Icon alignment in footer is a bit off but I'll have to fix it later.

--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,8 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  fadookie
+youtube_url: https://www.youtube.com/@EliotLash
+youtube_username: '@EliotLash'
 mastodon_url: https://social.coop/@Eliot_L
 mastodon_username: '@Eliot.L@social.coop'
 itchio_url: https://eliot-l.itch.io
