WIP - refactoring to use Jekyll for filtering because CSS is dumb and I need to know which grid element is first to get stuff to align, also for permalinks

--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,8 @@ collections:
   works:
     output: true
     permalink: /:collection/:name
+  portfolio:
+    output: true
 
 # Build settings
 markdown: kramdown
